<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelDetail"
    android:padding="18dp"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >


        <ImageView
            android:id="@+id/img_hotels"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/hotel_image"
            android:paddingBottom="10dp"
            tools:src="@drawable/hotel_1" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_name"
                android:textColor="@color/black"
                android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/hotels_name" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotel_location"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_hotel_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hotels_location"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


        <TextView
            android:id="@+id/tv_hotel_to_centre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            tools:text="@string/hotels_to_cen"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:textSize="16sp"
            android:id="@+id/tv_hotel_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/hotels_desc"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hotel_price"
            tools:text="@string/hotels_price"
            android:textStyle="bold"
            android:textColor="@color/primer_dark"
            android:textSize="16sp"
            />

        
        
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_book_now"
            android:backgroundTint="@color/primer"
            android:text="@string/book"
            android:textColor="@color/white"/>


    </LinearLayout>
    
    
</ScrollView>